# Manim

./: .env.example  .gitignore  DEPLOY.md  README.md  app.py  ngrok.yml  pyproject.toml  requirements.txt  test_ocr.py
middleware/: auth.py
models/: __init__.py  schemas.py
services/: __init__.py  audio_processor.py  database_service.py  file_processor.py  manim_optimizer.py  script_generator.py  supabase_storage.py  video_processor.py
utils/: __init__.py  config.py  database_logger.py  helpers.py  manim_config.py  supabase_config.py
